--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "12.16.3",
+    "yarn": "1.22.4"
   }
 }
