--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "license": "BSD",
   "dependencies": {
     "express": "~4.17.1",
-    "socket.io": "~2.3.0"
+    "socket.io": "~2.3.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   },
   "scripts": {
     "start": "babel-node server.js",
     "dev": "nodemon --exec babel-node server.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "nodemon": "^2.0.4"
   },
   "engines": {
