--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "private": true,
   "license": "BSD",
   "dependencies": {
-    "express": "~4.17.1",
-    "socket.io": "~2.3.0",
     "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "express": "~4.17.1",
+    "socket.io": "~2.3.0"
   },
   "scripts": {
     "start": "babel-node server.js",
